--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -119,7 +119,8 @@ jobs:
             odoo_version=${{ matrix.odoo_version }}
             odoo_org_repo=${{ matrix.odoo_org_repo }}
             setuptools_constraint=${{ matrix.setuptools_constraint }}
-            codename=${{ matrix.codename }}
+            virtualenv_constraint=${{ matrix.virtualenv_constraint }}
+            # codename=${{ matrix.codename }}
           tags: |
             ghcr.io/steingabelgaard/oca-ci/${{ matrix.image_name }}:latest
           labels: |
